Fixed problem overlapping problem when moving a question between pages

--- a/src/rex.formbuilder/www/css/builder.css
+++ b/src/rex.formbuilder/www/css/builder.css
@@ -67,8 +67,8 @@ body, p, div, td, input {
 
 .rb-drag-helper {
 	position: relative;
-	min-height: 30px;
-	min-width: 100px;
+	/* min-height: 30px;
+	min-width: 100px;i */
     border: 1px solid #4867ed;
 }
 
@@ -257,7 +257,7 @@ body, p, div, td, input {
     right: 0px;
     left: 0px;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: visible;
     padding-left: 0px;
     list-style-type: none;
 }
